--- a/style.css
+++ b/style.css
@@ -81,6 +81,11 @@ img.website-img {
   margin: 0 auto;
 }
 
+#title-text {
+  font-weight: bold;
+  font-size: 3rem;
+}
+
 /* ---------- Gradient Background ---------- */
 
 #gradient-background {
